syntax = "proto3";

package ticktrader.algo.server.publicApi;

option csharp_namespace = "TickTrader.Algo.Server.PublicAPI";

import "google/protobuf/any.proto";
import "management/base.request.proto";


message Update {
    enum Action {
        Added = 0;
        Updated = 1;
        Removed = 2;
    }
}

message UpdateInfo {
    google.protobuf.Any payload = 2;
}

message HeartbeatUpdate {
    RequestResult exec_result = 101;
}